2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Fixed inner type access issues.

2009-02-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Added
	  AttributeArguments context.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Allow templates to
	  set a target framework version.

2009-02-21  Ankit Jain  <jankit@novell.com>

	Merge r127549 from mcs.
	Fix #449683.
	* MonoDevelop.Projects.Formats.MSBuild.Conditions/ConditionTokenizer.cs:
	Handle unquoted item references (with or w/o transforms) in conditions.
	* MonoDevelop.Projects.Formats.MSBuild.Conditions/ConditionParser.cs:
	Parse unquoted item, property references.
	eg. Condition = " @(Foo->'%(Extension)') == '.exe' "
	* MonoDevelop.Projects.Formats.MSBuild.Conditions/Token.cs
	(Token.ToString): Override.
	(TokenType.Transform): Uncomment.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: fixed "Bug
	  477641 - Completion showing incorrect members for a
	  parameter".

2009-02-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom/IType.cs:
	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom.Serialization/ClassEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/DomTypeProxy.cs:
	  Added new flag for classes which contain extension methods.

	* MonoDevelop.Projects.Dom.Serialization/DomPersistence.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Avoid storing duplicate strings when saving a type. The name
	  table will now generate ids for new strings.

2009-02-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: Don't automatically
	  remove references when a file is deleted. Fixes bug 477517 -
	  Clean on a project causes the deletion of a reference in