@@ -1,5 +1,10 @@
 2009-02-23  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Dom/AbstractMember.cs: Fixed inner type
+	  bug.
+
+2009-02-23  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
 	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
 	  Fixed inner type access issues.
